--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,7 @@ section.category .categoryProduct .card {
     text-decoration: none;
 }
 
-.ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title, section.category .categoryProduct .card h5.card-title {
+.ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title, section.category .categoryProduct .card h5.card-title ,section.category .categoryProduct .card h5.card-title, .ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title span, section.category .categoryProduct .card h5.card-title span{
     color: #5a5a5a;
     font-size: 13px;
     line-height: 17px;
@@ -537,7 +537,9 @@ section.category .categoryProduct .card {
     font-size: 13px;
     color: #a7a7a7;
 }
-
+.card.CardPrice {
+    width: 100% !important;
+}
 .card.CardPrice .Price p.before {
     text-decoration: line-through;
     color: #a7a7a7;
@@ -1255,7 +1257,6 @@ Media
 
     section.category .categoryProduct .card h5.card-title, .ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title span, section.category .categoryProduct .card h5.card-title span {
         font-size: 11px;
-        line-height: 20px;
     }
 
     section.category .categoryProduct .card .card-text .rating {
@@ -1278,7 +1279,9 @@ Media
     .card.CardPrice .Price p.before {
         font-size: 9px;
     }
-
+    section.category .categoryProduct .card.CardPrice {
+        width: 100% !important;
+    }
 
     section.category .categoryProduct .card a {
         border-bottom: 2px solid #80808029;
