--- a/css/style.css
+++ b/css/style.css
@@ -1275,7 +1275,7 @@ Media
     
 
     section.category .categoryProduct .card {
-        width: 50% !important;
+        width: 48% !important;
         padding: 0 5px;
     }
 
@@ -1353,9 +1353,9 @@ Media
         transition: 1s ease all !important;
     }
     .brandBody section.category .categoryProduct .card {
-        box-shadow:0px 0px 0px ;
+        box-shadow: 0px 3px 7px rgb(156, 156, 156);
     }
-    .brandBody section.category .categoryProduct .card:hover {
-        box-shadow:0px 0px 0px ;
+    .brandBody section.category .categoryProduct .card:hover,.brandBody section.category .categoryProduct .card:focus,.brandBody section.category .categoryProduct .card:active {
+        box-shadow: 0px 3px 7px rgb(0, 0, 0);
     }
 }
