--- a/css/style.css
+++ b/css/style.css
@@ -1172,6 +1172,7 @@ Media
 
     nav.navbar .navbar-nav a.nav-link {
         margin-left: 10px;
+        padding-top: 10px !important;
     }
 
     section.OfferCarousel .carousel .carousel-control-prev, section.OfferCarousel .carousel .carousel-control-next {
@@ -1341,7 +1342,9 @@ Media
         padding-top: 10px !important;
     }
 
-
+    .nav-link {
+        margin-top: 10px !important;
+    }
 }
 
 @media (max-width: 575px) {
