--- a/css/style.css
+++ b/css/style.css
@@ -87,17 +87,25 @@ nav.navbar .offcanvas-start .offcanvas-body .list-group-item a {
     color: black;
 }
 
-.nav-link, nav.navbar .dropdown button ,section.productDetails .carousel .carousel-indicators button.like, section.productDetails .carousel .carousel-indicators button.share {
+.nav-link, nav.navbar .dropdown button ,section.productDetails .carousel .carousel-indicators button.like, section.productDetails .carousel .carousel-indicators button.share,button.btn.btn-default.btn-number {
     display: flex !important;
     align-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     padding: 0 !important;
 }
-
+section.productDetails .addToCart{
+    display: flex !important;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 8px !important;
+}
 
 nav.navbar .navbar-nav a.nav-link, nav.navbar .dropdown button, nav.navbar button.SideBar {
     font-weight: 500;
