--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,9 @@ nav.navbar form {
     width: 50%;
     margin-left: 20px;
 }
-
+nav.navbar form.completeOrder{
+    width: 100%;
+}
 nav.navbar form input {
     border-radius: 20px;
 }
@@ -663,7 +665,7 @@ section.productDescription .tab-content>.active {
     font-size: 15px;
     margin-top: 20px;
     line-height: 30px;
-    color: #676767;
+    color: #000000;
     font-weight: 450;
 }
 
@@ -1257,7 +1259,7 @@ Media
     }
 
     section.productDescription .nav-tabs, section.productDescription .nav-tabs .nav-link {
-        margin-left: 5px;
+        margin-left: 35px;
         font-size: 16px;
     }
 
