--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,13 @@ nav.navbar .offcanvas-start, .offcanvas-start#filter2, .offcanvas-start#filter1 
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
-
+.OffcanvasButtons {
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    height: 100%;
+    text-align: start;
+}
 nav.navbar .offcanvas-start .offcanvas-body {
     padding: 0px 5px;
     background-color: white !important;
